--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,14 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.2.0",
+    "@types/pg": "^8.11.6",
     "cors": "^2.8.5",
     "nodemon": "^3.1.4",
     "typescript": "^5.5.4"
