--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.7.4",
     "chart.js": "^4.4.3",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "faker": "^5.5.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
